--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get update -qq && sudo apt-get install postgresql-server-dev-9.3
 
 before_script:
-  - psql -c 'create database chitter_test;' -U postgres
+  - psql -c 'create database chitter_test; create database chitter_development;' -U postgres
 
 test:
   adapter: postgresql
